--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "TPLab4": {
+    "tplab4": {
       "projectType": "application",
       "schematics": {},
       "root": "",
@@ -53,7 +53,13 @@
             "development": {
               "optimization": false,
               "extractLicenses": false,
-              "sourceMap": true
+              "sourceMap": true,
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.development.ts"
+                }
+              ]
             }
           },
           "defaultConfiguration": "production"
@@ -62,10 +68,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "buildTarget": "TPLab4:build:production"
+              "buildTarget": "tplab4:build:production"
             },
             "development": {
-              "buildTarget": "TPLab4:build:development"
+              "buildTarget": "tplab4:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -73,7 +79,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "buildTarget": "TPLab4:build"
+            "buildTarget": "tplab4:build"
           }
         },
         "test": {
@@ -93,6 +99,23 @@
             ],
             "scripts": []
           }
+        },
+        "deploy": {
+          "builder": "@angular/fire:deploy",
+          "options": {
+            "version": 2
+          },
+          "configurations": {
+            "production": {
+              "buildTarget": "tplab4:build:production",
+              "serveTarget": "tplab4:serve:production"
+            },
+            "development": {
+              "buildTarget": "tplab4:build:development",
+              "serveTarget": "tplab4:serve:development"
+            }
+          },
+          "defaultConfiguration": "production"
         }
       }
     }
