--- a/package.json
+++ b/package.json
@@ -7,21 +7,24 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "serve:ssr:TPLab4": "node dist/tplab4/server/server.mjs"
+    "serve:ssr:tplab4": "node dist/tplab4/server/server.mjs"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^17.2.0",
+    "@angular/animations": "^17.3.7",
     "@angular/common": "^17.2.0",
     "@angular/compiler": "^17.2.0",
-    "@angular/core": "^17.2.0",
+    "@angular/core": "^17.3.6",
+    "@angular/fire": "^17.0.1",
     "@angular/forms": "^17.2.0",
+    "@angular/material": "^17.3.6",
     "@angular/platform-browser": "^17.2.0",
     "@angular/platform-browser-dynamic": "^17.2.0",
     "@angular/platform-server": "^17.2.0",
     "@angular/router": "^17.2.0",
     "@angular/ssr": "^17.2.3",
     "express": "^4.18.2",
+    "ngx-toastr": "^18.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
